Viewlog fix to overlapping Title.
Small demo of what you can do with BS3.
* Made sure that H1 and Inputs are in grid and using form-group.
* Hidden the input labels on small width devices. That's maybe personal, but I like it.
* Made sure the inputs move below Title, on small devices, and are floating left. (used mediaquery for this).

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -3471,3 +3471,27 @@ div#searchNotification {
 .summaryTable tr td {
     word-break: break-all;
 }
+
+
+/* =======================================================================
+viewLog.mako
+========================================================================== */
+
+/* Pull left in mobile resolutions */
+@media (max-width: 767px) {
+    .pull-xs-right {
+        float: right !important;
+    }
+    .pull-xs-left {
+        float: left !important;
+    }
+
+    .radio-inline.pull-xs-left  + .radio-inline.pull-xs-left ,
+    .checkbox-inline.pull-xs-left  + .checkbox-inline.pull-xs-left  {
+        margin-left: 0;
+    }
+    .radio-inline.pull-xs-left, .checkbox-inline.pull-xs-left{
+        margin-right: 10px;
+    }
+}
+
